ir/parser/CureParser.py
# Generated from ir/Cure.g4 by ANTLR 4.13.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class CureParser ( Parser ):

    grammarFileName = "Cure.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'if'", "'in'", "'new'", "'use'", "'for'", 
                     "'enum'", "'else'", "'func'", "'test'", "'while'", 
                     "'break'", "'const'", "'return'", "'extern'", "'foreach'", 
                     "'continue'", "'class'", "'static'", "'public'", "'private'", 
                     "'override'", "'''", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'nil'", "<INVALID>", "'+'", "'-'", "'*'", 
                     "'/'", "'%'", "'=='", "'!='", "'>'", "'<'", "'>='", 
                     "'<='", "'&&'", "'||'", "'!'", "'..'", "'.'", "','", 
                     "':'", "'~'", "'='", "'('", "')'", "'{'", "'}'", "'['", 
                     "']'", "'$'", "'<-'", "'?'", "'->'", "'&'", "'=>'" ]

    symbolicNames = [ "<INVALID>", "IF", "IN", "NEW", "USE", "FOR", "ENUM", 
                      "ELSE", "FUNC", "TEST", "WHILE", "BREAK", "CONST", 
                      "RETURN", "EXTERN", "FOREACH", "CONTINUE", "CLASS", 
                      "STATIC", "PUBLIC", "PRIVATE", "OVERRIDE", "APOSTROPHE", 
                      "INT", "FLOAT", "STRING", "BOOL", "NIL", "ID", "ADD", 
                      "SUB", "MUL", "DIV", "MOD", "EEQ", "NEQ", "GT", "LT", 
                      "GTE", "LTE", "AND", "OR", "NOT", "DOUBLEDOT", "DOT", 
                      "COMMA", "COLON", "TILDE", "ASSIGN", "LPAREN", "RPAREN", 
                      "LBRACE", "RBRACE", "LBRACK", "RBRACK", "DOLLAR", 
                      "RARROW", "QUESTION", "RETURNS", "AMPERSAND", "ARROWASSIGN", 
                      "COMMENT", "MULTILINE_COMMENT", "WHITESPACE", "OTHER" ]

    RULE_parse = 0
    RULE_type = 1
    RULE_stmt = 2
    RULE_bodyStmts = 3
    RULE_body = 4
    RULE_ifStmt = 5
    RULE_elseifStmt = 6
    RULE_elseStmt = 7
    RULE_whileStmt = 8
    RULE_rangeStmt = 9
    RULE_foreachStmt = 10
    RULE_useStmt = 11
    RULE_externStmt = 12
    RULE_methodName = 13
    RULE_classProperty = 14
    RULE_classMethod = 15
    RULE_classDeclarations = 16
    RULE_classAssign = 17
    RULE_enumAssign = 18
    RULE_funcModifications = 19
    RULE_funcAssign = 20
    RULE_varAssign = 21
    RULE_testAssign = 22
    RULE_arg = 23
    RULE_args = 24
    RULE_param = 25
    RULE_params = 26
    RULE_dict_element = 27
    RULE_genericArgs = 28
    RULE_atom = 29
    RULE_expr = 30

    ruleNames =  [ "parse", "type", "stmt", "bodyStmts", "body", "ifStmt", 
                   "elseifStmt", "elseStmt", "whileStmt", "rangeStmt", "foreachStmt", 
                   "useStmt", "externStmt", "methodName", "classProperty", 
                   "classMethod", "classDeclarations", "classAssign", "enumAssign", 
                   "funcModifications", "funcAssign", "varAssign", "testAssign", 
                   "arg", "args", "param", "params", "dict_element", "genericArgs", 
                   "atom", "expr" ]

    EOF = Token.EOF
    IF=1
    IN=2
    NEW=3
    USE=4
    FOR=5
    ENUM=6
    ELSE=7
    FUNC=8
    TEST=9
    WHILE=10
    BREAK=11
    CONST=12
    RETURN=13
    EXTERN=14
    FOREACH=15
    CONTINUE=16
    CLASS=17
    STATIC=18
    PUBLIC=19
    PRIVATE=20
    OVERRIDE=21
    APOSTROPHE=22
    INT=23
    FLOAT=24
    STRING=25
    BOOL=26
    NIL=27
    ID=28
    ADD=29
    SUB=30
    MUL=31
    DIV=32
    MOD=33
    EEQ=34
    NEQ=35
    GT=36
    LT=37
    GTE=38
    LTE=39
    AND=40
    OR=41
    NOT=42
    DOUBLEDOT=43
    DOT=44
    COMMA=45
    COLON=46
    TILDE=47
    ASSIGN=48
    LPAREN=49
    RPAREN=50
    LBRACE=51
    RBRACE=52
    LBRACK=53
    RBRACK=54
    DOLLAR=55
    RARROW=56
    QUESTION=57
    RETURNS=58
    AMPERSAND=59
    ARROWASSIGN=60
    COMMENT=61
    MULTILINE_COMMENT=62
    WHITESPACE=63
    OTHER=64

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ParseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(CureParser.EOF, 0)

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CureParser.StmtContext)
            else:
                return self.getTypedRuleContext(CureParser.StmtContext,i)


        def getRuleIndex(self):
            return CureParser.RULE_parse

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParse" ):
                return visitor.visitParse(self)
            else:
                return visitor.visitChildren(self)




    def parse(self):

        localctx = CureParser.ParseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_parse)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 11826349207639930) != 0):
                self.state = 62
                self.stmt()
                self.state = 67
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 68
            self.match(CureParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(CureParser.ID, 0)

        def LBRACK(self):
            return self.getToken(CureParser.LBRACK, 0)

        def type_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CureParser.TypeContext)
            else:
                return self.getTypedRuleContext(CureParser.TypeContext,i)


        def RBRACK(self):
            return self.getToken(CureParser.RBRACK, 0)

        def QUESTION(self):
            return self.getToken(CureParser.QUESTION, 0)

        def COLON(self):
            return self.getToken(CureParser.COLON, 0)

        def LPAREN(self):
            return self.getToken(CureParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(CureParser.RPAREN, 0)

        def RETURNS(self):
            return self.getToken(CureParser.RETURNS, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(CureParser.COMMA)
            else:
                return self.getToken(CureParser.COMMA, i)

        def getRuleIndex(self):
            return CureParser.RULE_type

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType" ):
                return visitor.visitType(self)
            else:
                return visitor.visitChildren(self)




    def type_(self):

        localctx = CureParser.TypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_type)
        self._la = 0 # Token type
        try:
            self.state = 110
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 70
                self.match(CureParser.ID)
                self.state = 79
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==53:
                    self.state = 71
                    self.match(CureParser.LBRACK)
                    self.state = 72
                    self.type_()
                    self.state = 75
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==46:
                        self.state = 73
                        self.match(CureParser.COLON)
                        self.state = 74
                        self.type_()


                    self.state = 77
                    self.match(CureParser.RBRACK)


                self.state = 82
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==57:
                    self.state = 81
                    self.match(CureParser.QUESTION)


                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 84
                self.match(CureParser.LPAREN)
                self.state = 93
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==28 or _la==49:
                    self.state = 85
                    self.type_()
                    self.state = 90
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==45:
                        self.state = 86
                        self.match(CureParser.COMMA)
                        self.state = 87
                        self.type_()
                        self.state = 92
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)



                self.state = 95
                self.match(CureParser.RPAREN)
                self.state = 96
                self.match(CureParser.RETURNS)
                self.state = 97
                self.type_()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 98
                self.match(CureParser.LPAREN)
                self.state = 107
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==28 or _la==49:
                    self.state = 99
                    self.type_()
                    self.state = 104
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==45:
                        self.state = 100
                        self.match(CureParser.COMMA)
                        self.state = 101
                        self.type_()
                        self.state = 106
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)



                self.state = 109
                self.match(CureParser.RPAREN)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varAssign(self):
            return self.getTypedRuleContext(CureParser.VarAssignContext,0)


        def funcAssign(self):
            return self.getTypedRuleContext(CureParser.FuncAssignContext,0)


        def classAssign(self):
            return self.getTypedRuleContext(CureParser.ClassAssignContext,0)


        def enumAssign(self):
            return self.getTypedRuleContext(CureParser.EnumAssignContext,0)


        def testAssign(self):
            return self.getTypedRuleContext(CureParser.TestAssignContext,0)


        def foreachStmt(self):
            return self.getTypedRuleContext(CureParser.ForeachStmtContext,0)


        def whileStmt(self):
            return self.getTypedRuleContext(CureParser.WhileStmtContext,0)


        def ifStmt(self):
            return self.getTypedRuleContext(CureParser.IfStmtContext,0)


        def useStmt(self):
            return self.getTypedRuleContext(CureParser.UseStmtContext,0)


        def rangeStmt(self):
            return self.getTypedRuleContext(CureParser.RangeStmtContext,0)


        def externStmt(self):
            return self.getTypedRuleContext(CureParser.ExternStmtContext,0)


        def expr(self):
            return self.getTypedRuleContext(CureParser.ExprContext,0)


        def getRuleIndex(self):
            return CureParser.RULE_stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt" ):
                return visitor.visitStmt(self)
            else:
                return visitor.visitChildren(self)




    def stmt(self):

        localctx = CureParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_stmt)
        try:
            self.state = 124
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 112
                self.varAssign()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 113
                self.funcAssign()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 114
                self.classAssign()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 115
                self.enumAssign()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 116
                self.testAssign()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 117
                self.foreachStmt()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 118
                self.whileStmt()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 119
                self.ifStmt()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 120
                self.useStmt()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 121
                self.rangeStmt()
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 122
                self.externStmt()
                pass

            elif la_ == 12:
                self.enterOuterAlt(localctx, 12)
                self.state = 123
                self.expr(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BodyStmtsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt(self):
            return self.getTypedRuleContext(CureParser.StmtContext,0)


        def RETURN(self):
            return self.getToken(CureParser.RETURN, 0)

        def expr(self):
            return self.getTypedRuleContext(CureParser.ExprContext,0)


        def CONTINUE(self):
            return self.getToken(CureParser.CONTINUE, 0)

        def BREAK(self):
            return self.getToken(CureParser.BREAK, 0)

        def getRuleIndex(self):
            return CureParser.RULE_bodyStmts

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBodyStmts" ):
                return visitor.visitBodyStmts(self)
            else:
                return visitor.visitChildren(self)




    def bodyStmts(self):

        localctx = CureParser.BodyStmtsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_bodyStmts)
        try:
            self.state = 131
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1, 3, 4, 5, 6, 8, 9, 10, 12, 14, 15, 17, 23, 24, 25, 26, 27, 28, 29, 30, 42, 49, 51, 53]:
                self.enterOuterAlt(localctx, 1)
                self.state = 126
                self.stmt()
                pass
            elif token in [13]:
                self.enterOuterAlt(localctx, 2)
                self.state = 127
                self.match(CureParser.RETURN)
                self.state = 128
                self.expr(0)
                pass
            elif token in [16]:
                self.enterOuterAlt(localctx, 3)
                self.state = 129
                self.match(CureParser.CONTINUE)
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 4)
                self.state = 130
                self.match(CureParser.BREAK)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(CureParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(CureParser.RBRACE, 0)

        def bodyStmts(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CureParser.BodyStmtsContext)
            else:
                return self.getTypedRuleContext(CureParser.BodyStmtsContext,i)


        def getRuleIndex(self):
            return CureParser.RULE_body

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBody" ):
                return visitor.visitBody(self)
            else:
                return visitor.visitChildren(self)




    def body(self):

        localctx = CureParser.BodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_body)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self.match(CureParser.LBRACE)
            self.state = 137
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 11826349207715706) != 0):
                self.state = 134
                self.bodyStmts()
                self.state = 139
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 140
            self.match(CureParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(CureParser.IF, 0)

        def expr(self):
            return self.getTypedRuleContext(CureParser.ExprContext,0)


        def body(self):
            return self.getTypedRuleContext(CureParser.BodyContext,0)


        def elseifStmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CureParser.ElseifStmtContext)
            else:
                return self.getTypedRuleContext(CureParser.ElseifStmtContext,i)


        def elseStmt(self):
            return self.getTypedRuleContext(CureParser.ElseStmtContext,0)


        def getRuleIndex(self):
            return CureParser.RULE_ifStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStmt" ):
                return visitor.visitIfStmt(self)
            else:
                return visitor.visitChildren(self)




    def ifStmt(self):

        localctx = CureParser.IfStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_ifStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            self.match(CureParser.IF)
            self.state = 143
            self.expr(0)
            self.state = 144
            self.body()
            self.state = 148
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,12,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 145
                    self.elseifStmt() 
                self.state = 150
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,12,self._ctx)

            self.state = 152
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==7:
                self.state = 151
                self.elseStmt()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElseifStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ELSE(self):
            return self.getToken(CureParser.ELSE, 0)

        def IF(self):
            return self.getToken(CureParser.IF, 0)

        def expr(self):
            return self.getTypedRuleContext(CureParser.ExprContext,0)


        def body(self):
            return self.getTypedRuleContext(CureParser.BodyContext,0)


        def getRuleIndex(self):
            return CureParser.RULE_elseifStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElseifStmt" ):
                return visitor.visitElseifStmt(self)
            else:
                return visitor.visitChildren(self)




    def elseifStmt(self):

        localctx = CureParser.ElseifStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_elseifStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 154
            self.match(CureParser.ELSE)
            self.state = 155
            self.match(CureParser.IF)
            self.state = 156
            self.expr(0)
            self.state = 157
            self.body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElseStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ELSE(self):
            return self.getToken(CureParser.ELSE, 0)

        def body(self):
            return self.getTypedRuleContext(CureParser.BodyContext,0)


        def getRuleIndex(self):
            return CureParser.RULE_elseStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElseStmt" ):
                return visitor.visitElseStmt(self)
            else:
                return visitor.visitChildren(self)




    def elseStmt(self):

        localctx = CureParser.ElseStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_elseStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 159
            self.match(CureParser.ELSE)
            self.state = 160
            self.body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(CureParser.WHILE, 0)

        def expr(self):
            return self.getTypedRuleContext(CureParser.ExprContext,0)


        def body(self):
            return self.getTypedRuleContext(CureParser.BodyContext,0)


        def getRuleIndex(self):
            return CureParser.RULE_whileStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileStmt" ):
                return visitor.visitWhileStmt(self)
            else:
                return visitor.visitChildren(self)




    def whileStmt(self):

        localctx = CureParser.WhileStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_whileStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 162
            self.match(CureParser.WHILE)
            self.state = 163
            self.expr(0)
            self.state = 164
            self.body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RangeStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(CureParser.FOR, 0)

        def ID(self):
            return self.getToken(CureParser.ID, 0)

        def IN(self):
            return self.getToken(CureParser.IN, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CureParser.ExprContext)
            else:
                return self.getTypedRuleContext(CureParser.ExprContext,i)


        def DOUBLEDOT(self):
            return self.getToken(CureParser.DOUBLEDOT, 0)

        def body(self):
            return self.getTypedRuleContext(CureParser.BodyContext,0)


        def getRuleIndex(self):
            return CureParser.RULE_rangeStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRangeStmt" ):
                return visitor.visitRangeStmt(self)
            else:
                return visitor.visitChildren(self)




    def rangeStmt(self):

        localctx = CureParser.RangeStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_rangeStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 166
            self.match(CureParser.FOR)
            self.state = 167
            self.match(CureParser.ID)
            self.state = 168
            self.match(CureParser.IN)
            self.state = 169
            self.expr(0)
            self.state = 170
            self.match(CureParser.DOUBLEDOT)
            self.state = 171
            self.expr(0)
            self.state = 172
            self.body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForeachStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOREACH(self):
            return self.getToken(CureParser.FOREACH, 0)

        def ID(self):
            return self.getToken(CureParser.ID, 0)

        def IN(self):
            return self.getToken(CureParser.IN, 0)

        def expr(self):
            return self.getTypedRuleContext(CureParser.ExprContext,0)


        def body(self):
            return self.getTypedRuleContext(CureParser.BodyContext,0)


        def getRuleIndex(self):
            return CureParser.RULE_foreachStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForeachStmt" ):
                return visitor.visitForeachStmt(self)
            else:
                return visitor.visitChildren(self)




    def foreachStmt(self):

        localctx = CureParser.ForeachStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_foreachStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 174
            self.match(CureParser.FOREACH)
            self.state = 175
            self.match(CureParser.ID)
            self.state = 176
            self.match(CureParser.IN)
            self.state = 177
            self.expr(0)
            self.state = 178
            self.body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UseStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def USE(self):
            return self.getToken(CureParser.USE, 0)

        def STRING(self):
            return self.getToken(CureParser.STRING, 0)

        def getRuleIndex(self):
            return CureParser.RULE_useStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUseStmt" ):
                return visitor.visitUseStmt(self)
            else:
                return visitor.visitChildren(self)




    def useStmt(self):

        localctx = CureParser.UseStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_useStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 180
            self.match(CureParser.USE)
            self.state = 181
            self.match(CureParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExternStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EXTERN(self):
            return self.getToken(CureParser.EXTERN, 0)

        def STRING(self):
            return self.getToken(CureParser.STRING, 0)

        def getRuleIndex(self):
            return CureParser.RULE_externStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExternStmt" ):
                return visitor.visitExternStmt(self)
            else:
                return visitor.visitChildren(self)




    def externStmt(self):

        localctx = CureParser.ExternStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_externStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 183
            self.match(CureParser.EXTERN)
            self.state = 184
            self.match(CureParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodNameContext(ParserRuleContext):
        __slots__ = 'parser'
